# AttnGAN

./: .gitignore  README.md  main.py  pyproject.toml
src/: dataset.py  discriminator.py  generator.py  text_encoder.py  vocabulary.py
